<resources>
    <string name="app_name">SimpleApplication</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="first">First</string>
    <string name="new_device_installation">New Device Installation</string>
    <string name="device_1">Device 1</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
</resources>
